Implement new CLI.