@@ -5,10 +5,20 @@
 
 package qtm;
 
+import java.io.BufferedReader;
 import java.io.File;
+import java.io.FileNotFoundException;
+import java.io.FileReader;
 import java.io.IOException;
 import java.sql.SQLException;
+import java.util.ArrayList;
 import java.util.Arrays;
+
+import org.apache.commons.io.FilenameUtils;
+import org.apache.jena.base.Sys;
+import org.apache.zookeeper.Shell.ExitCodeException;
+
+import com.github.andrewoma.dexx.collection.List;
 
 import readers.PmcMetaReader;
 import resultDb.QtlDb;
@@ -31,51 +41,69 @@ public class QtmMain {
     public static void main(String[] args) throws IOException {
 
         long startTime = System.currentTimeMillis();//to calculate run-time
-        
-        if (args.length == 0 | Arrays.asList(args).contains("-h") | Arrays.asList(args).contains("--help") ) {
+
+        if (args.length == 0 | Arrays.asList(args).contains("-h") | Arrays.asList(args).contains("--help")) {
             printHelp();
             return;
         }
-        
-        if (Arrays.asList(args).contains("-v") | Arrays.asList(args).contains("--version") ) {
+
+        if (Arrays.asList(args).contains("-v") | Arrays.asList(args).contains("--version")) {
             System.out.println("1.0 ");
             return;
         }
-        
-        if (Arrays.asList(args).contains("-o")) {
-            String dbName2 = args[Arrays.asList(args).indexOf("-o") + 1];
-            QtlDb.dbName = dbName2;
 
+        if (Arrays.asList(args).contains("-o")) {
+           String outFile = args[Arrays.asList(args).indexOf("-o") + 1];
+           if (outFile.endsWith(".db")) {
+               QtlDb.dbFile=args[Arrays.asList(args).indexOf("-o") + 1];
+           } else {
+               QtlDb.dbFile=args[Arrays.asList(args).indexOf("-o") + 1] + ".db";
+           }
         }
 
-        String pmcs = args[Arrays.asList(args).indexOf("-pmc") + 1];
-        String[] pmcIds = pmcs.split(",");
+        String inputFile = args[args.length - 1];
 
-        //String[] pmcIds = args;// pmcIds = new String[]{"PMC4540768"};
-        System.out.println(Configs.getPropertyQTM("solrProgram"));
+        ArrayList<String> pmcIds = new ArrayList<String>();
+
+        BufferedReader reader = null;
+
+        try {
+            reader = new BufferedReader(new FileReader(inputFile));
+            String pmcId = null;
+
+            while ((pmcId = reader.readLine()) != null) {
+                pmcIds.add(pmcId);
+            }
+        } catch (FileNotFoundException e) {
+            System.out.println("Input file '" + inputFile + "' not found.");
+            System.exit(1);
+        } catch (IOException e) {
+            e.printStackTrace();
+        }
+        reader.close();
+
         String solrProgram = Configs.getPropertyQTM("solrProgram");
-
         System.out.println("===============");
         System.out.println("QTLTableMiner++");
         System.out.println("===============\n\n");
-        
+
         //intialisation
         QtlDb.createTables();
 
         System.out.println("\n");
 
         //Step1:  reading xml files with pmc ids 		
-        File[] xmlFiles = new File[pmcIds.length];
-        Article[] articles = new Article[pmcIds.length];
-
-        for (int i = 0; i < pmcIds.length; i++) {
-            xmlFiles[i] = PmcMetaReader.pmcDowloadXml(pmcIds[i]);
+        File[] xmlFiles = new File[pmcIds.size()];
+        Article[] articles = new Article[pmcIds.size()];
+        
+        for (int i = 0; i < pmcIds.size(); i++) {
+            xmlFiles[i] = PmcMetaReader.pmcDowloadXml(pmcIds.get(i));
             articles[i] = new Article("");
             PmcMetaReader pmcMetaReader = new PmcMetaReader(xmlFiles[i]);
 
             //Parsing meta-data, cell entries and finding the abbreviations 
             System.out.println("Processing article:\n");
-            System.out.println("\t" + pmcIds[i]);
+            System.out.println("\t" + pmcIds.get(i));
             System.out.println("---------------------------------------------");
             articles[i] = pmcMetaReader.read();
 
@@ -98,7 +126,7 @@ public class QtmMain {
         //STEP3 Inserting enteries into the database
         System.out.println("Insert entry to the database.");
         System.out.println("-------------------------------------------------");
-        
+
         QtlDb.insertArticleEntry(articles);
 
         //STEP4 Insert in Trait Table
@@ -124,31 +152,27 @@ public class QtmMain {
             e.printStackTrace();
         }
         System.out.println("\n");
-
-        if (Arrays.asList(args).contains("-csv")) {
-            try {
-                String csvfile = args[Arrays.asList(args).indexOf("-csv") + 1];
-                System.out.println("Writing results to csv file.");
-                System.out.println("-----------------------------------------");
-                Process p = Runtime.getRuntime()
-                        .exec(new String[] { "bash", "-c", "sqlite3 -header -csv " + QtlDb.dbName + " \"Select * from QTL;\" >" + csvfile});
-                p.waitFor();
-            } catch (Exception e) {
-                e.printStackTrace();
-            }
-            System.out.println("\n");
+        String csvFile = "";
+        try {
+            csvFile = FilenameUtils.getBaseName(QtlDb.dbFile) + ".csv";
+            System.out.println("Writing results into '" + csvFile + "'");
+            System.out.println("-----------------------------------------");
+            Process p = Runtime.getRuntime().exec(new String[] { "bash", "-c",
+                    "sqlite3 -header -csv " + QtlDb.dbFile + " \"SELECT * FROM QTL;\" >" + csvFile });
+            p.waitFor();
+        } catch (Exception e) {
+            e.printStackTrace();
         }
-
-        System.out.println("\n\n");
+        System.out.println("\n");
         System.out.println("=================================================");
         System.out.println("RESULTS are available in the following files:");
         System.out.println("=================================================");
-        System.out.println("SQLite file: \t" + QtlDb.dbName);
-        if (Arrays.asList(args).contains("-csv"))
-            System.out.println("CSV file: \t" + args[Arrays.asList(args).indexOf("-csv") + 1]);
+        System.out.println("Number of processed articles:\t" + articles.length);
+        System.out.println("SQLite file: \t" + QtlDb.dbFile);
+        System.out.println("CSV file: \t" + csvFile);
 
         try {
-            QtlDb.c.close();
+            QtlDb.conn.close();
         } catch (SQLException e) {
             System.out.println("SQL Exception is clossing the conection");
             e.printStackTrace();
@@ -157,33 +181,30 @@ public class QtmMain {
         Runtime runtime = Runtime.getRuntime();
         runtime.gc();
         long memory = runtime.totalMemory() - runtime.freeMemory();
-        System.out.println("Used memory is bytes: \t" + memory);
-        System.out.println("Used memory is megabytes: \t" + bytesToMegabytes(memory));
+        System.out.println("Memory used (bytes): \t" + memory);
         long stopTime = System.currentTimeMillis();
         long elapsedTime = stopTime - startTime;
-        System.out.println("Total run time: \t" + elapsedTime);
-
+        System.out.println("Total runtime (s): \t" + elapsedTime);
     }
 
     public static void printHelp() {
         System.out.println("\nDESCRIPTION");
         System.out.println("===========");
         System.out.println("QTL TableMiner++ is a command-line tool to retrieve"
-          + " and semantically annotate\nresults of QTL mapping studies"
-          + " described in tables of scientific articles.\n");
+                + " and semantically annotate\nresults of QTL mapping studies"
+                + " described in tables of scientific articles.\n");
         System.out.println("USAGE");
         System.out.println("=====");
         System.out.println("  QTM [-v|-h]");
         System.out.println("  QTM [-o FILE_PREFIX] FILE\n");
         System.out.println("ARGUMENTS");
         System.out.println("=========");
-        System.out.println("  FILE\t\tList of full-text articles from Europe PMC"
-          + " (one PMCID per line).\n");
+        System.out.println("  FILE\t\tList of full-text articles from Europe PMC" + " (one PMCID per line).\n");
         System.out.println("OPTIONS");
         System.out.println("=======");
-        System.out.println("  -o|--output FILE_PREFIX\tOutput files in SQLite/"
-          + "CSV formats.\n\t\t\t\t(default: PMCID.{db,csv})");        
-        System.out.println("  -v|--version\t\t\tPrint software version.");        
+        System.out.println(
+                "  -o|--output FILE_PREFIX\tOutput files in SQLite/" + "CSV formats.\n\t\t\t\t(default: qtl.{db,csv})");
+        System.out.println("  -v|--version\t\t\tPrint software version.");
         System.out.println("  -h|--help\t\t\tPrint this help message.");
         System.out.println("\n");
     }
